# targo

./: Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
targo/: Cargo.toml
targo/src/: cargo_cli.rs  dispatch.rs  helpers.rs  lib.rs  main.rs  metadata.rs  store.rs
