[package]
name = "targo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
atomicwrites = "0.4.3"
blake3 = "1.5.4"
bs58 = "0.5.1"
camino = { version = "1.1.9", features = ["serde1"] }
cap-std = { version = "3.2.0", features = ["fs_utf8"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
fs2 = "0.4.3"
home = "0.5.9"
lexopt = { version = "0.3.0" }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
shell-words = { version = "1.1.0" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[dev-dependencies]
shell-words = "1.1.0"
